fix for bunting causing scrollbar

--- a/weddingapp/static/src/scss/parts/components.scss
+++ b/weddingapp/static/src/scss/parts/components.scss
@@ -5,6 +5,7 @@
   margin-bottom: 1em;
   padding: 2em;
   position: relative;
+  overflow-x: hidden;
 
   // bunting
   &:before, &:after {
